# claude-daily

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  daily-bot-architecture.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  settings.py  topics.py
scripts/: daily-bot.service  install_launchd.sh  install_systemd.sh  install_task.bat  setup_linux.sh  setup_macos.sh  setup_windows.bat
src/: __init__.py
src/core/: __init__.py  engine.py
src/domain/: __init__.py  enums.py  models.py
src/errors/: __init__.py  handler.py
src/generators/: __init__.py  base.py  claude_code_generator.py
src/generators/prompts/: __init__.py  templates.py
src/integrations/: __init__.py
src/integrations/notion/: __init__.py  adapter.py
src/integrations/slack/: __init__.py  adapter.py  command_handler.py
src/reports/: __init__.py  generator.py
src/storage/: __init__.py  base.py  sqlite_repository.py
src/storage/migrations/: 001_initial_schema.sql  runner.py
src/utils/: __init__.py  async_utils.py  datetime_utils.py  logger.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_command_handler.py  test_engine.py  test_error_handler.py  test_generator.py  test_notion_adapter.py  test_report_generator.py  test_slack_adapter.py
tests/unit/: __init__.py  test_async_utils.py  test_datetime_utils.py  test_migrations.py  test_models.py  test_rate_limiter.py  test_repository.py  test_settings.py  test_topics.py
