[project]
name = "daily-bot"
version = "0.3.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "E712", "B904", "RUF001", "RUF002", "RUF003", "RUF005", "RUF022", "UP042"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"tests/*" = ["E402", "F841", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["slack_sdk.*", "slack_bolt.*", "notion_client.*", "apscheduler.*", "aiosqlite.*", "structlog.*", "tenacity.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
